[gd_scene load_steps=7 format=3 uid="uid://bs8d74bs2dq3i"]

[ext_resource type="Texture2D" uid="uid://btlf2wybmilxn" path="res://projectiles/fire.png" id="1_qbxph"]
[ext_resource type="Script" path="res://projectiles/bullet/bullet.gd" id="2_p2i4f"]
[ext_resource type="AudioStream" uid="uid://denxavm4pcgdk" path="res://projectiles/laser_shooting_sfx.wav" id="3_hw41e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ill5l"]
atlas = ExtResource("1_qbxph")
region = Rect2(0, 0, 200, 164)

[sub_resource type="SpriteFrames" id="SpriteFrames_j55t8"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ill5l")
}],
"loop": true,
"name": &"fire",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5fb5j"]
size = Vector2(106, 18)

[node name="Bullet" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_j55t8")
animation = &"fire"
script = ExtResource("2_p2i4f")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(14, -5)
shape = SubResource("RectangleShape2D_5fb5j")

[node name="ShotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hw41e")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
